<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="vertical"
    android:rowCount="2">

    <androidx.cardview.widget.CardView
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginBottom="@dimen/default_margin"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:stateListAnimator="@animator/elevator"
        app:cardCornerRadius="@dimen/default_corner_radius"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/default_margin_half">

            <ImageView
                android:layout_width="@dimen/device_info_system_icon_size"
                android:layout_height="@dimen/device_info_system_icon_size"
                android:src="@drawable/ic_edgeration_short" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_info_edgeration_version"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/edgeration_version_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_info_place_holder_unknown" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:stateListAnimator="@animator/elevator"
        app:cardCornerRadius="@dimen/default_corner_radius"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/default_margin_half">

            <ImageView
                android:layout_width="@dimen/device_info_system_icon_size"
                android:layout_height="@dimen/device_info_system_icon_size"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:src="@drawable/ic_baseline_android_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_info_android_version"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/android_version_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_info_place_holder_unknown" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</GridLayout>